<resources>
    <string name="app_name">My Secret</string>
    <string name="txt_auth">Authentication</string>
    <string name="txt_email">E-mail</string>
    <string name="txt_password">Password</string>
    <string name="txt_submit">Submit</string>
    <string name="txt_register">Sign Up</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_cancel">Cancel</string>
    <string name="txt_info">Add your information</string>
    <string name="txt_remember">Secret Password</string>
    <string name="txt_save">Save</string>
    <string name="txt_logout">Sign Out</string>
</resources>
