<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    tools:context="com.example.compilerexe.secret.HomeActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_remember"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/txt_remember1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:maxLength="40"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_remember"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/txt_remember2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:maxLength="40"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_remember"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp" />

    <EditText
        android:id="@+id/txt_remember3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="24sp"
        android:maxLength="40"
        android:layout_marginBottom="10dp" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_save"
        android:background="@color/colorPrimary"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textAppearance="@style/TextAppearance.AppCompat" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/txt_logout"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

</LinearLayout>
